// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders the toast component with icon 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:bg-success ds:inline-flex ds:h-8 ds:items-center ds:gap-3 ds:rounded-sm ds:pl-5 ds:text-primary-gray ds:text-body-sm ds:font-arial ds:pr-7"
  role="alert"
>
  mood
  This is a toast message
</div>
`;

exports[`Toast > renders the toast component with text 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:bg-success ds:inline-flex ds:h-8 ds:items-center ds:gap-3 ds:rounded-sm ds:pl-5 ds:text-primary-gray ds:text-body-sm ds:font-arial ds:pr-5"
  role="alert"
>
  This is a toast message
</div>
`;
